@@ -5,7 +5,7 @@
 #	Name:
 #		GD::Graph::Data.pm
 #
-# $Id: Data.pm,v 1.2 2000/02/08 12:36:05 mgjv Exp $
+# $Id: Data.pm,v 1.3 2000/02/09 12:56:43 mgjv Exp $
 #
 #==========================================================================
 
@@ -67,6 +67,10 @@ or for quick changes to legacy code
   $data->copy_from(\@data);
 
   # And now do all the new stuff that's wanted.
+  while (@foo = bar_baz())
+  {
+	  $data->add_point(@foo);
+  }
 
 =head1 METHODS
 
@@ -76,19 +80,36 @@ Create a new GD::Graph::Data object.
 
 =cut
 
+#
+# Since we can't store any attributes in our objects, we'll keep a class
+# hash with the stringified object references as keys.
+#
+# There is also place for an entry with the class as name, so that class
+# errors can be dealt with.
+#
+my %Errors;
+
 sub new
 {
 	my $proto = shift;
 	my $class = ref($proto) || $proto;
 	my $self = [];
 	bless $self => $class;
+	return $self;
+}
+
+sub DESTROY
+{
+	my $self = shift;
+	delete $Errors{$self};
 }
 
 sub _set_value
 {
 	my $self = shift;
 	my ($nd, $np, $val) = @_;
-	return if $nd < 0 && $np < 0;
+	$self->_set_error('Point number should be positive'), return 
+		if $nd < 0 && $np < 0;
 
 	# Make sure we have empty arrays in between
 	if ($nd > $self->num_sets)
@@ -145,13 +166,17 @@ You probably will never need this. Returns undef on failure.
 sub set_y
 {
 	my $self = shift;
-	return if $_[0] < 1;
+	$self->_set_error('Data sets start at 1'), return 
+		if $_[0] < 1;
 	$self->_set_value(@_);
 }
 
 =head2 $data->get_y($nd, $np)
 
-Get the Y value of point I<$np> in data set I<$nd>. See L<"set_y">.
+Get the Y value of point I<$np> in data set I<$nd>. See L<"set_y">. This
+will return undef on an error, but the fact that it returns undef does
+not mean there was an error (since undefined values can be stored, and
+therefore returned).
 
 =cut
 
@@ -167,18 +192,34 @@ sub get_y
 	$self->[$nd][$np];
 }
 
+# Undocumented, not part of interface right now. Might expose at later
+# point in time.
+
+sub set_point
+{
+	my $self = shift;
+	#return if (@_ != $self->num_sets + 1);
+	my $point = shift;
+
+	for (my $ds = 0; $ds < @_; $ds++)
+	{
+		$self->_set_value($ds, $point, $_[$ds]);
+	}
+	return 1;
+}
+
 =head2 $data->add_point($X, $Y1, $Y2 ...)
 
 Adds a point to the data set. The base for the addition is the current
 number of X values. This means that if you have a data set with the
-following contents:
+contents
 
   (X1,  X2)
   (Y11, Y12)
   (Y21)
   (Y31, Y32, Y33, Y34)
 
-that a C<$data->add_point(Xx, Y1x, Y2x, Y3x, Y4x)> will result in
+a $data->add_point(Xx, Y1x, Y2x, Y3x, Y4x) will result in
 
   (X1,    X2,    Xx )
   (Y11,   Y12,   Y1x)
@@ -191,20 +232,16 @@ all data sets are of equal length, this method is safe to use.
 
 =cut
 
+# This is basically equivalent to a 
+# $data->set_point($data->num_points, $X, $Y1, $Y2 ...)
+
 sub add_point
 {
 	my $self = shift;
-	#return if (@_ != $self->num_sets + 1);
-	my $point = $self->num_points;
-
-	for (my $ds = 0; $ds < @_; $ds++)
-	{
-		$self->_set_value($ds, $point, $_[$ds]);
-	}
-	return 1;
+	$self->set_point($self->num_points, @_);
 }
 
-=head2 $data->num_sets
+=head2 $data->num_sets()
 
 Returns the number of data sets.
 
@@ -216,7 +253,7 @@ sub num_sets
 	@{$self} - 1;
 }
 
-=head2 $data->num_points
+=head2 $data->num_points()
 
 In list context, returns a list with its first element the number of X
 values, and the subsequent elements the number of respective Y values
@@ -229,13 +266,16 @@ from a call to C<make_strict>.
 sub num_points
 {
 	my $self = shift;
-	return unless @{$self};
+
+	$self->_set_error('Data set contains no data sets yet'), return 
+		unless @{$self};
+
 	wantarray ?
 		map { scalar @{$_} } @{$self} :
 		scalar @{$self->[0]}
 }
 
-=head2 $data->x_values
+=head2 $data->x_values()
 
 Return a list of all the X values.
 
@@ -250,7 +290,8 @@ sub x_values
 =head2 $data->y_values($nd)
 
 Return a list of the Y values for data set I<$nd>. Data sets are
-numbered from 1.
+numbered from 1. Returns the empty list if $nd is out of range, or if
+the data set at $nd is empty.
 
 =cut
 
@@ -264,20 +305,23 @@ sub y_values
 	@{$self->[$nd]};
 }
 
-=head2 $data->reset
+=head2 $data->reset() OR GD::Graph::Data->reset()
 
-Reset the data container. Get rid of all data.
+As an object method: Reset the data container, get rid of all data and
+error messages. As a class method: get rid of accumulated error messages
+and possible other crud.
 
 =cut
 
 sub reset
 {
 	my $self = shift;
-	@{$self} = ();
+	@{$self} = () if ref($self);
+	delete $Errors{$self};
 	return 1;
 }
 
-=head2 $data->make_strict
+=head2 $data->make_strict()
 
 Make all data set lists the same length as the X list by truncating data
 sets that are too long, and filling data sets that are too short with
@@ -309,17 +353,18 @@ sub make_strict
 	return 1;
 }
 
-=head2 $data->cumulate
+=head2 $data->cumulate()
 
 The B<cumulate> parameter will summarise the Y value sets as follows:
-that the first Y value list will be unchanged, the second will contain a
+the first Y value list will be unchanged, the second will contain a
 sum of the first and second, the third will contain the sum of first,
 second and third, and so on.  Returns undef on failure.
 
-Note: Any non-numerical Y values will be treated as 0. But you really
-shouldn't be using this to store that sort of Y data. This is mainly for
-internal use by GD::Graph, but if you can find a use for it, you're
-welcome.
+Note: Any non-numerical defined Y values will be treated as 0, but you
+really shouldn't be using this to store that sort of Y data. The sum of
+undefined values exclusively is the undefined value. An undefined value
+in a sum that contains something which isn't undefined, will count as a
+0.
 
 =cut
 
@@ -351,7 +396,33 @@ sub cumulate
 	return 1;
 }
 
-=head2 $data->copy_from(\@data)
+=head2 $data->wanted(indexes)
+
+Removes all data sets except the ones in the argument list. It will also
+reorder the data sets in the order given. Returns undef on failure.
+
+To remove all data sets except the first, sixth and second, in that
+order:
+
+  $data->wanted(1, 6, 2) or die $data->error;
+
+=cut
+
+sub wanted
+{
+	my $self = shift;
+	for (@_)
+	{
+		$self->_set_error("Wanted index $_ out of range 1-"
+				. $self->num_sets),
+			return
+				if $_ < 1 || $_ > $self->num_sets;
+	}
+	@{$self} = @{$self}[0, @_];
+	return 1;
+}
+
+=head2 $data->copy_from($data_ref)
 
 Copy an 'old' style GD::Graph data structure or another GD::Graph::Data
 object into this object. This will remove the current data. Returns undef
@@ -363,15 +434,20 @@ sub copy_from
 {
 	my $self = shift;
 	my $data = shift;
-	return unless ref($data) eq 'ARRAY' || 
-				  ref($data) eq 'GD::Graph::Data';
+	$self->_set_error('Not a valid source data structure'), return 
+		unless ref($data) eq 'ARRAY' || 
+		       ref($data) eq 'GD::Graph::Data';
 	
 	$self->reset;
 
+	my $i = 0;
 	for my $data_set (@{$data})
 	{
-		return unless ref($data_set) eq 'ARRAY';
+		$self->_set_error("Invalid data set: $i"), return 
+			unless ref($data_set) eq 'ARRAY';
+
 		push @{$self}, [@{$data_set}];
+		$i++;
 	}
 
 	return 1;
@@ -379,26 +455,7 @@ sub copy_from
 
 =head2 $data->copy(I<arguments>)
 
-Returns a copy of the object, or undef on failure. Possible arguments
-are:
-
-B<wanted>. If this is present and a reference to an array, then the
-elements of that array will be taken to be the numbers of the data sets
-you want to copy. For example, if you want data sets 1, 3 and 6, you'd
-do
-
-  $new_data = $data->copy(wanted => [1, 3, 6]);
-
-B<strict>. if this parameter is present and set to a true value, returns
-a copy of the object, but with all the data sets 'levelled' to the
-contents of the X values list (see L<"make_strict">). 
-
-  $new_data = $data->copy(strict => 1);
-
-B<cumulate>. This parameter will return a copy with the Y values
-summarised (see L<"cumulate">).
-
-  $new_data = $data->copy(cumulate => 1);
+Returns a copy of the object, or undef on failure.
 
 =cut
 
@@ -406,25 +463,12 @@ sub copy
 {
 	my $self = shift;
 
-	return if (@_ && @_ % 2);
+	$self->_set_error('Arguments must be given as a hash list'), return 
+		if (@_ && @_ % 2);
 	my %args = @_;
 
-	my $origin = $self;
-
-	if ($args{wanted} && ref($args{wanted}) eq 'ARRAY')
-	{
-		$origin = [];
-		push @{$origin}, [$self->x_values];
-		for my $w (@{$args{wanted}})
-		{
-			push @{$origin}, [$self->y_values($w)];
-		}
-	}
-
 	my $new = $self->new();
-	$new->copy_from($origin);
-	$new->make_strict if $args{strict};
-	$new->cumulate if $args{cumulate};
+	$new->copy_from($self);
 	return $new;
 }
 
@@ -451,7 +495,7 @@ Valid arguments are:
 
 I<file>, mandatory. The file name of the file to read from.
 
-  $data->read(file => '/data/foo.dat');
+  $data->read(file => '/data/foo.dat') or die $data->error;
 
 I<no_comment>. Give this a true value if you don't want lines with an
 initial # to be skipped.
@@ -469,12 +513,15 @@ instead of a single tab.
 sub read
 {
 	my $self = shift;
-	local(*DAT);
+	local(*DATA);
 
+	$self->_set_error('Arguments must be given as a hash list'), return 
+		if (@_ && @_ % 2);
 	return if (@_ && @_ % 2);
 	my %args = @_;
 
-	return unless $args{file};
+	$self->_set_error('Missing required argument: file'), return 
+		unless $args{file};
 
 	my $delim = $args{delimiter} || qr/\t/;
 
@@ -485,17 +532,62 @@ sub read
 
 	$self->reset;
 
-	open(DAT, $args{file}) or return;
-	while(<DAT>)
+	open(DATA, $args{file}) or 
+		$self->_set_error("open ($args{file}): $!"), return;
+	while(<DATA>)
 	{
 		chomp;
 		next if /^#/ && !$args{no_comment};
 		my @fields = parse_line($delim, 1, $_);
 		next unless @fields;
-		print join(':', @fields), "\n";
 		$self->add_point(@fields);
 	}
 	return 1;
+}
+
+=head2 $data->error() OR GD::Graph::Data->error()
+
+Returns a list of all the errors that the current object has
+accumulated. In scalar context, returns the last error. If called as a
+class method it works at a class level. This is handy when a constructor
+fails, for example:
+
+  my $data = GD::Graph::Data->new()    or die GD::Graph::Data->error;
+  $data->read(file => '/foo/bar.data') or die $data->error;
+
+or if you really are only interested in the last error:
+
+  $data->read(file => '/foo/bar.data') or die scalar $data->error;
+
+You could even do something like:
+
+  $data->read(file => '/foo/bar.data');
+  while (my @foo = $sth->fetchrow_array)
+  {
+	  $data->add_point(@foo);
+  }
+  $data->set_x(12, 'Foo');
+  die "ACK!:\n", $data->error if ($data->error);
+
+And in some cases (see L<"copy">) this is indeed the only way to
+check for errors.
+
+=cut
+
+sub _set_error
+{
+	my $self = shift;
+	push @{$Errors{$self}}, @_ if @_;
+}
+
+sub error
+{
+	my $self = shift;
+	my $i = 0;
+	return unless exists $Errors{$self};
+	wantarray ? 
+		map { $i++; "(GD::Graph::Data) $i: $_\n" } @{$Errors{$self}} : 
+		$Errors{$self}->[-1];
 }
 
 =head1 NOTES
