@@ -1,3 +1,7 @@
+09 Feb 2000
+
+- Added GD::Graph::Data to distribution
+
 27 Jan 2000
 
 - Added patch from Hildebrand, which allows non-drawing of accents on
